@@ -1,5 +1,6 @@
 2001-03-28  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* tools/expack.cc, files/utils.*: fixed expack switch_slashes problem
+	* gumps/Paperdoll_gump_info.cc: corrected cloak shape numbers
 
 2001-03-28  Jeff Freedman  <jeff@amy.nerble.net>
 
